--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
 
-    <title>Speech color changer</title>
+    <title>Order Something</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -29,8 +29,11 @@ body {
   <body>
     <div class="d-flex orders_wrapper justify-content-center"></div>
     <div class="d-flex justify-content-center">
-      <button class="w-50" onclick="recognition.start()"> Start </button>
+      <button class="w-50" onclick="recognition.start()"> Order Something </button>
     </div>
     <script src="main.js"></script>
   </body>
 </html>
+
+
+
